[project]
name = "prompt-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.88.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.135.3",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "streamlit>=1.56.0",
]
